--- a/translations/translations_de.csv
+++ b/translations/translations_de.csv
@@ -1,4 +1,4 @@
-,de
+key,de
 TIP_HEADER,"Wussten Sie dass…"
 TIP_1,"Jede Einheit kann nur einmal pro Runde angreifen"
 TIP_2,"Units have own weaknesses and advantages - only troops can capture buildings but they have almost no chance against tanks and tanks can’t attack helis"
