--- a/translations/translations_es.csv
+++ b/translations/translations_es.csv
@@ -1,4 +1,4 @@
-,es
+key,es
 TIP_HEADER,"Sabías que..."
 TIP_1,"Cada unidad puede atacar solo una vez por turno"
 TIP_2,"Las unidades tienen debilidades y ventajas: solo las tropas pueden capturar edificios, pero no tienen casi opciones contra los tanques, y los tanques no pueden atacar a los helicópteros"
