--- a/translations/translations_fr.csv
+++ b/translations/translations_fr.csv
@@ -1,4 +1,4 @@
-,fr
+key,fr
 TIP_HEADER,"Saviez-vous que..."
 TIP_1,"Chaque unité ne peut attaquer qu'une seule fois par tour"
 TIP_2,"Chaque unité a ses forces et faiblesses - seul les fantassins peuvent capturer les bâtiments mais ils n'ont aucune chance contre les tanks - qui ne peuvent pas attaquer les hélicoptères"
