--- a/translations/translations_pl.csv
+++ b/translations/translations_pl.csv
@@ -1,4 +1,4 @@
-,pl
+key,pl
 TIP_HEADER,"Czy wiesz, że..."
 TIP_1,"Każda jednostka może zaatakować tylko raz na turę"
 TIP_2,"Jednostki mają wady i zalety - piechota może zajmować budynki, lecz nie ma szans w starciu z czołgami, które z kolei nie mogą walczyć z helikopterami"
