--- a/translations/translations_ru.csv
+++ b/translations/translations_ru.csv
@@ -1,4 +1,4 @@
-,ru
+key,ru
 TIP_HEADER,"Знаете ли вы..."
 TIP_1,"Любой тип войск атакует лишь раз за ход"
 TIP_2,"У каждого типа войск есть свои приемущества и недостатки - только пехота может занимать здания, но они слабы против танков, а танки не могут атаковать вертолеты"
