--- a/translations/translations_zh_CN.csv
+++ b/translations/translations_zh_CN.csv
@@ -1,4 +1,4 @@
-,zh-CN
+key,zh-CN
 TIP_HEADER,"Did you know that..."
 TIP_1,"Each unit can attack only once a turn"
 TIP_2,"Units have weaknesses and advantages - only troops can capture buildings but they have almost no chance against tanks and tanks can’t attack helis"
