Lokalise label and tips translations

--- a/translations/translations_zh_CN.csv
+++ b/translations/translations_zh_CN.csv
@@ -1,195 +1,182 @@
-key,zh-CN
-TIP_HEADER,"Did you know that..."
-TIP_1,"Each unit can attack only once a turn"
-TIP_2,"Units have weaknesses and advantages - only troops can capture buildings but they have almost no chance against tanks and tanks can’t attack helis"
-TIP_3,"You can deploy soldiers in HQ but it is cheaper to do so in the barracks"
-TIP_4,"A unit loses all its remaining AP for the turn when capturing a Tower"
-TIP_5,"All production buildings require a soldier to maintain it - capturing them will cost you a soldier unit"
-TIP_6,"HQ and captured Towers or Airports will produce cash in every turn"
-TIP_7,"Cash can be spent for deploying units and movement"
-TIP_8,"Use your cash wisely - a big army will be slower and less effective than a small squad"
-TIP_9,"It’s never a good idea to send a unit onto the battlefield alone"
-TIP_10,"Mixing unit types in squads gives you a strategic advantage"
-TIP_11,"You cannot deploy a unit when the spawning point is blocked and neither can the enemy - block enemy factories with your units"
-TIP_12,"Units can attack only adjacent tiles - so when your target is far away you should first move your unit closer"
-TIP_13,"HQ is the most valuable building in game - if you capture the enemy HQ you will win the game"
-LABEL_WORKSHOP,WORKSHOP
-LABEL_MAIN_MENU,"MAIN MENU"
-LABEL_START_TURN,"START TURN"
+TIP_HEADER,你知道吗...
+TIP_1,每个单位每回合只能攻击一次
+TIP_2,"每种单位有弱点和优点 - 只有步兵才能占领建筑物，但几乎没有对抗坦克的胜算，而坦克则无法攻击直升机。"
+TIP_3,你可以在总部里部署士兵，但是在营房里这样做更便宜。
+TIP_4,当一个单位夺取一个塔时，它失去了本回合的所有剩余行动点数
+TIP_5,"所有生产建筑都需要一个士兵来维护它 - 占领它们将花费你一个士兵单位"
+TIP_6,总部和占领的塔或机场每回合会产生现金
+TIP_7,现金可以用于部署单位和移动
+TIP_8,"明智地使用你的现金 - 一个庞大的军队将比一个小分队更慢、更低效"
+TIP_9,单独派遣一个单位上战场永远不是一个好主意
+TIP_10,在班组中混合单元的类型会给你带来战略优势
+TIP_11,"阻塞出兵口将不能部署单位，敌人也不能 - 用你的单位封锁敌人的工厂"
+TIP_12,"单位只能攻击相邻的格子 - 所以当你的目标很远时，你应该先让你的单位靠近"
+TIP_13,"总部是游戏中最有价值的建筑物 - 如果你占领了敌方总部，你将赢得游戏"
+LABEL_WORKSHOP,工坊
+LABEL_MAIN_MENU,主菜单
+LABEL_START_TURN,开始回合
 LABEL_CAMPAIGN,远征
 LABEL_SKIRMISH,战斗
-LABEL_CONFIRM,CONFIRM
-LABEL_UNIT_ATTACK,attack
-LABEL_UNIT_HEALTH,health
-LABEL_UNIT_RANGE,range
-LABEL_BUILDING_HQ,HQ
-LABEL_BUILDING_BARRACKS,BARRACKS
-LABEL_BUILDING_FACTORY,FACTORY
-LABEL_BUILDING_AIRPORT,AIRPORT
-LABEL_BUILDING_GSM_TOWER,"GSM TOWER"
-LABEL_REMOTE,REMOTE
-LABEL_LOCAL,LOCAL
+LABEL_CONFIRM,确认
+LABEL_UNIT_ATTACK,攻击
+LABEL_UNIT_HEALTH,健康值
+LABEL_UNIT_RANGE,范围
+LABEL_BUILDING_HQ,总部
+LABEL_BUILDING_BARRACKS,兵营
+LABEL_BUILDING_FACTORY,工厂
+LABEL_BUILDING_AIRPORT,机场
+LABEL_BUILDING_GSM_TOWER,通信塔
+LABEL_REMOTE,远程
+LABEL_LOCAL,本地
 LABEL_OFF,关
 LABEL_ON,开
 LABEL_GAME,游戏
-LABEL_RESUME,RESUME
-LABEL_EASY,EASY
+LABEL_RESUME,恢复
+LABEL_EASY,简单
 LABEL_NORMAL,普通
 LABEL_MAPS_CREATED,创建地图数
-LABEL_COMPLETED,通关
-LABEL_NEXT,NEXT
-LABEL_DELETE_MODE,DELETE
-LABEL_TURNS_CAP:,"TURNS CAP:"
+LABEL_COMPLETED,完成
+LABEL_NEXT,下一个
+LABEL_DELETE_MODE,删除
+LABEL_TURNS_CAP:,回合限制：
 LABEL_BACK,后退
-LABEL_SELECTED_MAP,"SELECTED MAP:"
-LABEL_TURNS_CAP,"TURNS CAP:"
-LABEL_PLAY,PLAY
+LABEL_SELECTED_MAP,选定的地图：
+LABEL_TURNS_CAP,回合限制:
+LABEL_PLAY,开始游戏
 LABEL_CPU,CPU
-LABEL_HUMAN,HUMAN
-LABEL_ATTACK,ATTACK
-LABEL_HEALTH_MAX,"HEALTH / MAX"
-LABEL_HEALTH,HEALTH
-LABEL_ACTION_SLOTS,"ACTION SLOTS"
-LABEL_INFANTRY,INFANTRY
-LABEL_UNIT_HELI,HELI
-LABEL_RANGE,RANGE
-LABEL_DEPLOY_PRICE,"DEPLOY PRICE"
-LABEL_DEPLOY,DEPLOY
-LABEL_END,END
-LABEL_TURN,TURN
-LABEL_NEW_TURN,"NEW TURN"
-LABEL_ACTION_POINTS,"ACTION POINTS"
-LABEL_UNIT,UNIT
-LABEL_BUILDING,BUILDING
-LABEL_NEXT_TURN_GAIN,"NEXT TURN GAIN"
-LABEL_MAP_NAME,"MAP NAME"
-LABEL_SELECT_UNIT,"SELECT UNIT"
-LABEL_PLEASE_WAIT,"PLEASE WAIT..."
-LABEL_SOUND_EFFECTS,"SOUND EFFECTS"
-LABEL_MUSIC,MUSIC
+LABEL_HUMAN,人类
+LABEL_ATTACK,攻击
+LABEL_HEALTH_MAX,健康值/最大值
+LABEL_HEALTH,健康值
+LABEL_ACTION_SLOTS,行动时段
+LABEL_INFANTRY,步兵
+LABEL_UNIT_HELI,直升机
+LABEL_RANGE,范围
+LABEL_DEPLOY_PRICE,部署价格
+LABEL_DEPLOY,部署
+LABEL_END,结束
+LABEL_TURN,回合
+LABEL_NEW_TURN,新的回合
+LABEL_ACTION_POINTS,行动点
+LABEL_UNIT,单位
+LABEL_BUILDING,建筑物
+LABEL_NEXT_TURN_GAIN,下一回合获得
+LABEL_MAP_NAME,地图名称
+LABEL_SELECT_UNIT,选择单位
+LABEL_PLEASE_WAIT,请等待...
+LABEL_SOUND_EFFECTS,音效
+LABEL_MUSIC,音乐
 LABEL_CAMERA_SHAKE,镜头抖动
 LABEL_AUTO_FOLLOW,镜头自动跟踪
 LABEL_ZOOM_LEVEL,缩放级别
 LABEL_BIGGER,放大
 LABEL_SMALLER,缩小
-LABEL_WINDOW,WINDOW
+LABEL_WINDOW,窗口
 LABEL_FULL_SCREEN,全屏
 LABEL_DIFFICULTY,难度
-LABEL_WINS,WINS
+LABEL_WINS,胜利
 LABEL_SETTINGS,设置
 LABEL_QUIT_GAME,退出游戏
 LABEL_RUN_DEMO,开始演示
 "LABEL_MAP EDITOR",地图编辑器
 LABEL_ONLINE,联网模式
-LABEL_MISSION,MISSION
+LABEL_MISSION,任务
 LABEL_BLUE_TEAM,蓝方军团
-LABEL_RED_TEAM,"RED TEAM"
+LABEL_RED_TEAM,红队
 LABEL_START,开始游戏
 LABEL_MISSION_COMPLETED,远征通关
-LABEL_PREVIOUS,PREVIOUS
-LABEL_NAME,NAME
-LABEL_WORKSHOP_UNITS,UNITS
-LABEL_WORKSHOP_BUILDINGS,BUILDINGS
-LABEL_WORKSHOP_TERRAIN,TERRAIN
-LABEL_WORKSHOP_FILES_MANAGER,"FILES MANAGER"
-LABEL_WORKSHOP_PICK_MAP,"PICK MAP"
-LABEL_WORKSHOP_FILE_SAVED,"FILE SAVED"
-LABEL_WORKSHOP_TOOLBOX,TOOLBOX
-LABEL_WORKSHOP_UNDO_BUILD,"UNDO BUILD"
-LABEL_WORKSHOP_MOVE_MAP,"MOVE MAP"
-LABEL_WORKSHOP_BUILD_TERRAIN,"BUILD TERRAIN"
-LABEL_WORKSHOP_SELECTED_TOOL,"SELECTED TOOL"
-LABEL_WORKSHOP_CREATE,CREATE
-LABEL_WORKSHOP_SIZE,SIZE
-LABEL_WORKSHOP_CLEAR_LAYERS,"CELAR LAYERS"
-LABEL_WORKSHOP_EREASE,EREASE
-LABEL_WORKSHOP_PLAIN,PLAIN
-LABEL_WORKSHOP_DIRT,DIRT
-LABEL_WORKSHOP_FOREST,FOREST
-LABEL_WORKSHOP_MOUNTAIN,MOUNTAIN
-LABEL_WORKSHOP_RIVER,RIVER
-LABEL_WORKSHOP_BRIDGE,BRIDGE
-LABEL_WORKSHOP_CITY,CITY
-LABEL_WORKSHOP_RUBBLE,RUBBLE
-LABEL_WORKSHOP_STATUE,STATUE
-LABEL_WORKSHOP_FENCE,FENCE
-LABEL_WORKSHOP_ROAD#1,ROAD#1
-LABEL_WORKSHOP_ROAD#2,ROAD#2
-LABEL_WORKSHOP_HQ,HQ
-LABEL_WORKSHOP_BARRACKS,BARRACKS
-LABEL_WORKSHOP_FACTORY,FACTORY
-LABEL_WORKSHOP_AIRPORT,AIRPORT
-LABEL_WORKSHOP_SPAWN,SPAWN
-LABEL_WORKSHOP_GSM_TOWER,"GSM TOWER"
-LABEL_WORKSHOP_TOWER,TOWER
-LABEL_WORKSHOP_INFANTRY,INFANTRY
-LABEL_WORKSHOP_TANK,TANK
-LABEL_WORKSHOP_HELI,HELI
-LABEL_WORKSHOP_CIVILIAN,CIVILIAN
-LABEL_WORKSHOP_CONCRETE,CONCRETE
-MSG_NO_ENOUGH_AP,"NOT ENOUGH AP"
-MSG_START_YOUR_TURN_NOW,"Start your turn now!"
-MSG_EMPTY_DISPLAY,"&lt; NOTHING TO DISPLAY&#000a;&lt; SELECT UNIT OR BUILDING"
-MSG_GAME_DESCRIPTION_1,自由*&开源
-MSG_GAME_DESCRIPTION_2,回合制战略游戏
-MSG_FREE_AS_FREEDOM,"*free，是自由（freedom）的自由（free），而不是免费啤酒（free beer）的免费（free）"
-MSG_INDIE_GAME,"INDIE GAME&#000a;DESIGN &amp; &#000a;DEVELOP"
-MSG_WORKSHOP_USE_UNIQUE_NAME,"USE UNIQUE NAME"
-MSG_WORKSHOP_CREATE_NEW_ISLAND,"CREATE NEW ISLAND"
-MSG_WORKSHOP_LOSE_MAP_DATA,"YOU WILL LOSE MAP DATA!"
-LABEL_GAME_OVER,"GAME OVER"
-LABEL_DOMINATION,DOMINATION
-LABEL_MOVES,MOVES
-LABEL_DEPLOYED,DEPLOYED
-LABEL_ELIMINATED,ELIMINATED
-LABEL_BLUE,BLUE
-LABEL_RED,RED
-LABEL_TIME,TIME
-LABEL_TOTAL_SCORE,"TOTAL SCORE"
-LABEL_PLAYERS_TIME,"PLAYERS TIME"
-LABEL_MENU,MENU
-LABEL_PLAY_AGAIN,"PLAY AGAIN"
-LABEL_REQUIES_RESTART,"MAP RESTART REQUIRED"
+LABEL_PREVIOUS,上一个
+LABEL_NAME,名称
+LABEL_WORKSHOP_UNITS,单位
+LABEL_WORKSHOP_BUILDINGS,建筑物
+LABEL_WORKSHOP_TERRAIN,地形
+LABEL_WORKSHOP_FILES_MANAGER,文件管理器
+LABEL_WORKSHOP_PICK_MAP,选择地图
+LABEL_WORKSHOP_FILE_SAVED,文件已保存
+LABEL_WORKSHOP_TOOLBOX,工具箱
+LABEL_WORKSHOP_UNDO_BUILD,撤销建造
+LABEL_WORKSHOP_MOVE_MAP,移动地图
+LABEL_WORKSHOP_BUILD_TERRAIN,建造地形
+LABEL_WORKSHOP_SELECTED_TOOL,选择工具
+LABEL_WORKSHOP_CREATE,创建
+LABEL_WORKSHOP_SIZE,大小
+LABEL_WORKSHOP_CLEAR_LAYERS,清除图层
+LABEL_WORKSHOP_EREASE,清除
+LABEL_WORKSHOP_PLAIN,平原
+LABEL_WORKSHOP_DIRT,泥土
+LABEL_WORKSHOP_FOREST,森林
+LABEL_WORKSHOP_MOUNTAIN,山脉
+LABEL_WORKSHOP_RIVER,河流
+LABEL_WORKSHOP_BRIDGE,桥梁
+LABEL_WORKSHOP_CITY,城市
+LABEL_WORKSHOP_RUBBLE,瓦砾堆
+LABEL_WORKSHOP_STATUE,雕像
+LABEL_WORKSHOP_FENCE,栅栏
+LABEL_WORKSHOP_ROAD#1,道路#1
+LABEL_WORKSHOP_ROAD#2,道路#2
+LABEL_WORKSHOP_HQ,总部
+LABEL_WORKSHOP_BARRACKS,兵营
+LABEL_WORKSHOP_FACTORY,工厂
+LABEL_WORKSHOP_AIRPORT,机场
+LABEL_WORKSHOP_SPAWN,出兵口
+LABEL_WORKSHOP_GSM_TOWER,通信塔
+LABEL_WORKSHOP_TOWER,塔
+LABEL_WORKSHOP_INFANTRY,步兵
+LABEL_WORKSHOP_TANK,坦克
+LABEL_WORKSHOP_HELI,直升机
+LABEL_WORKSHOP_CIVILIAN,平民
+LABEL_WORKSHOP_CONCRETE,混凝土
+LABEL_GAME_OVER,游戏结束
+LABEL_DOMINATION,占领
+LABEL_MOVES,移动
+LABEL_DEPLOYED,部署
+LABEL_ELIMINATED,消灭
+LABEL_BLUE,蓝队
+LABEL_RED,红队
+LABEL_TIME,时间
+LABEL_TOTAL_SCORE,总分数
+LABEL_PLAYERS_TIME,玩家用时
+LABEL_MENU,菜单
+LABEL_PLAY_AGAIN,再玩一次
+LABEL_REQUIES_RESTART,需要重启地图
 LABEL_LANGUAGE,语言
 LABEL_OVERSCAN,过扫描
-LABEL_GAME_TIME,"GAME TIME"
-LABEL_TURNS,TURNS
-LABEL_BLUE_WINS,"BLUE WINS"
-LABEL_RED_WINS,"RED WINS"
+LABEL_GAME_TIME,游戏时间
+LABEL_TURNS,回合
+LABEL_BLUE_WINS,蓝队获胜
+LABEL_RED_WINS,红队获胜
 LABEL_PLAYING_AS,扮演
-LABEL_MAPS,MAPS
-LABEL_PAGE,PAGE
-LABEL_WORKSHOP_SAVE,SAVE
-LABEL_WORKSHOP_LOAD,LOAD
-LABEL_MAP_TO_UPLOAD,"Map to upload"
-LABEL_PROCEED_QUESTION,Proceed?
-LABEL_UPLOAD_MAP,"Upload Map"
-LABEL_UPLOAD,Upload
-LABEL_CANCEL,Cancel
-TIP_COMPLETE_MAP_FIRST,"You need to complete this map first in skirmish mode in order to be able to upload it."
-LABEL_GOT_IT,"Got it!"
-LABEL_ONLINE_MENU,"ONLINE MAPS"
-MSG_ONLINE_MENU_DESC,"DOWNLOAD NEW MAPS OR SHARE YOUR OWN CREATIONS WITH THE WORLD!"
-TIP_UPLOADING_WAIT,"Uploading! Please wait."
-TIP_UPLOADING_SUCCESS,"Upload successful! Now you can share your new map code with your friends: "
-TIP_UPLOADING_FAIL,"Upload failed. Please try again later."
-LABEL_DONE,Done
-TIP_WELCOME_ONLINE,"Welcome to ToF Online!"
-TIP_NEED_REGISTER,"Before you can start using online options, we need to register your device with our online system."
-LABEL_REGISTER,Register
-LABEL_LATER,"Maybe later"
-LABEL_REGISTER_PLAYER,"Register Player"
-TIP_REQUESTING_PLAYER_ID,"Requesting Player ID! Please wait."
-TIP_REQUESTING_PLAYER_FAIL,"Requesting Player ID failed. Please try again later."
-TIP_REQUESTING_PLAYER_SUCCESS,"Requesting Player ID successful. Welcome to ToF Online!"
-LABEL_DOWNLOAD_MAP,"Download Map"
-TIP_INPUT_CODE,"Please input map code"
-LABEL_DOWNLOAD,Download
-TIP_DOWNLOADING_WAIT,"Downloading map! Please wait."
-TIP_MAP_DOWNLOAD_SUCCESS,"Map has been downloaded."
-TIP_MAP_DOWNLOAD_FAIL,"Could not download a map. Please check if code is correct and try again."
-LABEL_VERSION,Version
-TITLE_GAMEPAD_CONFIG,游戏手柄图示
+LABEL_MAPS,地图
+LABEL_PAGE,页面
+LABEL_WORKSHOP_SAVE,保存
+LABEL_WORKSHOP_LOAD,加载
+LABEL_MAP_TO_UPLOAD,要上传的地图
+LABEL_PROCEED_QUESTION,继续？
+LABEL_UPLOAD_MAP,上传地图
+LABEL_UPLOAD,上传
+LABEL_CANCEL,取消
+TIP_COMPLETE_MAP_FIRST,你需要先在遭遇战模式下完成此地图，才能上传它。
+LABEL_GOT_IT,知道了！
+LABEL_ONLINE_MENU,在线地图
+TIP_UPLOADING_WAIT,正在上传！请稍候。
+TIP_UPLOADING_SUCCESS,上传成功！现在你可以与你的朋友分享你的新地图代码：
+TIP_UPLOADING_FAIL,上传失败。请稍后再试。
+LABEL_DONE,完成
+TIP_WELCOME_ONLINE,"欢迎来到ToF Online！"
+TIP_NEED_REGISTER,在你开始使用在线选项之前，我们需要在我们的在线系统中注册你的设备。
+LABEL_REGISTER,注册
+LABEL_LATER,以后再说
+LABEL_REGISTER_PLAYER,注册玩家
+TIP_REQUESTING_PLAYER_ID,正在请求玩家的ID！请等待。
+TIP_REQUESTING_PLAYER_FAIL,请求玩家ID失败。请稍后再试。
+TIP_REQUESTING_PLAYER_SUCCESS,"请求玩家ID成功。欢迎来到ToF Online！"
+LABEL_DOWNLOAD_MAP,下载地图
+TIP_INPUT_CODE,请输入地图代码
+LABEL_DOWNLOAD,下载
+TIP_DOWNLOADING_WAIT,正在下载地图！请等待。
+TIP_MAP_DOWNLOAD_SUCCESS,地图已下载完成。
+TIP_MAP_DOWNLOAD_FAIL,无法下载地图。请检查代码是否正确并重试。
+LABEL_VERSION,版本
 LABEL_PREVIOUS_UNIT,选取上一个单位
 LABEL_NEXT_UNIT,选取下一个单位
 LABEL_SELECTOR_MOVEMENT,移动选取框
@@ -199,88 +186,63 @@ LABEL_BACK_TO_MENU,打开主菜单
 LABEL_SELECT,实施行动
 LABEL_DEPLOY_UNIT,购买新单位
 LABEL_GAMEPAD_INFO,游戏手柄说明
-LABEL_WORKSHOP_THEME,"MAP THEME"
-LABEL_SUMMER,SUMMER
-LABEL_FALL,FALL
-LABEL_WINTER,WINTER
-LABEL_WORKSHOP_FAILURE,"OPERATION FAILURE"
-MSG_WORKSHOP_FILE_ERROR_NAME,"Map name may only contain alphanumeric characters and an underscore sign."
-MSG_WORKSHOP_FILE_NOT_FOUND,"Map with specified name does not exists."
-MSG_WORKSHOP_CHECK_TYPOS,"Please re-check file name"
+LABEL_WORKSHOP_THEME,地图主题
+LABEL_SUMMER,夏季
+LABEL_FALL,秋季
+LABEL_WINTER,冬季
+LABEL_WORKSHOP_FAILURE,操作失败
 LABEL_OK,确认
-LABEL_NEXT_TURN,"END TURN"
-LABEL_CPU_TURN,"CPU TURN"
-LABEL_REFRESHING_MATCHES,"REFRESHING MATCHES"
-TIP_REFRESHING_WAIT,"REFRESHING ONLINE MATCHES LIST. PLEASE WAIT..."
-LABEL_CREATE_MATCH,"CREATE MATCH"
-MSG_CONFIRM_CREATE,"DO YOU WANT TO HOST A NEW MATCH?"
-LABEL_PROCEED,PROCEED
-LABEL_PICK_SIDE,"PICK SIDE"
-MSG_PICK_SIDE,"PICK THE SIDE YOU WANT TO PLAY AS"
-MSG_SELECTED_MAP,"SELECTED MAP: "
-MSG_SELECTED_SIDE,"SELECTED SIDE: "
-MSG_READY_TO_CREATE,"CREATE MATCH?"
-MSG_CREATING_MATCH_WAIT,"CREATING NEW MATCH. PLEASE WAIT..."
-LABEL_FAILURE,"OPERATION FAILURE"
-MSG_OPERATION_FAILED,"NETWORK OPERATION FAILED. PLEASE CHECK YOUR INTERNET CONNECTION AND TRY AGAIN."
-LABEL_JOIN_MATCH,"JOIN A MATCH"
-MSG_INPUT_MATCH_CODE,"INPUT MATCH JOIN CODE"
-LABEL_JOIN,JOIN
-MSG_ALREADY_IN_MATCH,"YOU ARE ALREADY IN THAT MATCH"
-MSG_FETCHING_MATCH_DETAILS,"FETCHING MATCH DETAILS. PLEASE WAIT..."
-MAG_AVAILABLE_SIDE,"AVAILABLE SIDE: "
-MAG_PROCEED_JOIN,"JOIN THIS MATCH?"
-MSG_JOINING_MATCH_WAIT,"JOINING A MATCH. PLEASE WAIT..."
-LABEL_MATCH_CODE,"MATCH CODE: "
-LABEL_YOUR_TURN,"YOUR TURN"
-LABEL_ENEMY_TURN,"OPPONENT TURN"
-LABEL_YOU_WIN,"YOU WON"
-LABEL_YOU_LOSE,"YOU LOST"
-LABEL_NEW_MATCH,"NEW MATCH"
-LABEL_MATCH_IN_PROGRESS,"IN PROGRESS"
-LABEL_MATCH_ENDED,"MATCH ENDED"
-LABEL_MATCH_FORFEIT,"OPPONENT LEFT"
-LABEL_MAP_CODE,"MAP: "
-LABEL_INVALID_MATCH,"INVALID MATCH"
-LABEL_ABANDON_MATCH,"ABANDON MATCH"
-MAG_ABANDON_MATCH,"ARE YOU SURE YOU WANT TO ABANDON THIS MATCH? YOU WILL NOT BE ABLE TO CONTINUE THIS GAME."
-LABEL_CLEAR_SLOT,"CLEAR GAME SLOT"
-MSG_CLEARING_SLOT_WAIT,"CLEARING GAME SLOT. PLEASE WAIT..."
-LABEL_SHOW_REPLAY,"SHOW REPLAY"
-MSG_SHOW_REPLAY,"DO YOU WANT TO SEE THE REPLAY OF OPPONENTS TURN?"
-LABEL_REPLAY,REPLAY
-LABEL_SKIP,SKIP
-LABEL_LOADING_MATCH,"LOADING MATCH"
-MSG_LOADING_MATCH_WAIT,"LOADING MATCH DATA. PLEASE WAIT..."
-MSG_OPPONENT_WAIT,"WAITING FOR OPPONENT..."
-MSG_CHECKING_STATE,"CHECKING FOR NEW MOVES..."
-LABEL_REPLAYING_MOVES,"REPLAYING TURN"
-LABEL_REFRESH,REFRESH
-LABEL_MULTIPLAYER,MULTIPLAYER
-LABEL_CREATE,CREATE
-LABEL_FORFEIT,FORFEIT
-LABEL_CLEAR,CLEAR
-LABEL_HELP,HELP
-MSG_MULTIPLAYER_WELCOME,"Welcome to ToF multiplayer!"
-TIP_ONLINE_HELP_1,"To start a new game, press the Create button on one of the free slots. If the button is disabled, it means that you need to download an online map first. Visit http://online.tof.p1x.in to find some! Once you have hosted a game, give the match code to your friend so they may join."
-TIP_ONLINE_HELP_2,"While in a match, there is no time limit for you or your opponent to take a turn. Remember, you don't have to wait for your turn idly - you are free to play campaign, skirmish, or load into a different multiplayer match! Quitting the game is also an option, but would you do that?"
-TIP_ONLINE_HELP_3,"You are limited to only four match slots, so remember to clear the ones, that have ended."
-MSG_SPAWN_BLOCKED,"SPAWN BLOCKED"
-MSG_MULTIPLAYER_LOBBY_HEADLINE,"ONLINE MULTIPLAYER LOBBY"
-MSG_MULTIPLAYER_LOBBY_SUB,"you may have up to four simultaneous games"
-LABEL_WORKSHOP_CLEAR_MAP,"CLEAR EVERYTHING IN MAP"
-MSG_WORKSHOP_FILL_MAP,"FILL MAP WITH GRASS TILES"
-LABEL_WORKSHOP_TILES,TILES
-LABEL_PREVIEW,PREVIEW
-MSG_ASK_UPLOAD,"BEGIN MAP UPLOAD?"
+LABEL_NEXT_TURN,结束回合
+LABEL_CPU_TURN,"CPU 回合"
+LABEL_REFRESHING_MATCHES,正在刷新比赛
+TIP_REFRESHING_WAIT,正在刷新在线比赛列表。请稍候...
+LABEL_CREATE_MATCH,创建比赛
+LABEL_PROCEED,继续
+LABEL_PICK_SIDE,选择阵营
+LABEL_FAILURE,操作失败
+LABEL_JOIN_MATCH,加入一场比赛
+LABEL_JOIN,加入
+LABEL_MATCH_CODE,比赛代码：
+LABEL_YOUR_TURN,你的回合
+LABEL_ENEMY_TURN,对手回合
+LABEL_YOU_WIN,你赢了
+LABEL_YOU_LOSE,你输了
+LABEL_NEW_MATCH,新比赛
+LABEL_MATCH_IN_PROGRESS,进行中
+LABEL_MATCH_ENDED,比赛结束
+LABEL_MATCH_FORFEIT,对手离开
+LABEL_MAP_CODE,地图：
+LABEL_INVALID_MATCH,无效比赛
+LABEL_ABANDON_MATCH,放弃比赛
+LABEL_CLEAR_SLOT,清除游戏房间
+LABEL_SHOW_REPLAY,显示回放
+LABEL_REPLAY,重启游戏
+LABEL_SKIP,跳过
+LABEL_LOADING_MATCH,正在加载比赛
+LABEL_REPLAYING_MOVES,重新进行回合
+LABEL_REFRESH,刷新
+LABEL_MULTIPLAYER,多人游戏
+LABEL_CREATE,创建
+LABEL_FORFEIT,放弃
+LABEL_CLEAR,清除
+LABEL_HELP,帮助
+TIP_ONLINE_HELP_1,要开始一个新游戏，请按下一个游戏房间上的“创建”按钮。如果按钮被禁用，这意味着你需要先下载在线地图。请访问http://online.tof.p1x.in找一些！一旦你主持了一场比赛，请把比赛代码给你的朋友加入。
+TIP_ONLINE_HELP_2,"在比赛中，你或你的对手进行回合没有时间限制。记住，在等待你的回合时不要闲下来 - 你可以自由参与战役、遭遇战或加载到不同的多人比赛中！退出游戏也是一个选择，但你会这样做吗？"
+TIP_ONLINE_HELP_3,您最多只能创建四个游戏房间，清除那些已经结束的游戏房间。
+LABEL_WORKSHOP_CLEAR_MAP,清除地图上所有东西
+LABEL_WORKSHOP_TILES,格子
+LABEL_PREVIEW,预览
 LABEL_GFX,画面
 LABEL_SOUND,声音
 LABEL_TOOLTIPS,物品提示
-LABEL_CURRENT_TEAM,"CURRENT TEAM"
-LABEL_CURRENT_MAP,"CURRENT MAP"
+LABEL_CURRENT_TEAM,当前队伍
+LABEL_CURRENT_MAP,当前地图
 LABEL_AI_SPEED,AI速度
 LABEL_CAMERA_MOVE_TO_BUNKER,镜头移回总部
 LABEL_CAMERA_SPEED,镜头速度
-LABEL_BLUE_TEAM_TURN,"BLUE TEAM TURN"
-LABEL_RED_TEAM_TURN,"RED TEAM TURN"
-LABEL_NO_MORE_MOVES,"NO MOVES LEFT"
+LABEL_BLUE_TEAM_TURN,蓝队回合
+LABEL_RED_TEAM_TURN,红队回合
+LABEL_NO_MORE_MOVES,没有可用的移动次数
+MISSION_2_OFFICER_BARRACKS_TIP_1,部署与移动单位将花费我们的资源。要明智地使用这些资源。
+MISSION_2_OFFICER_BARRACKS_TIP_2,为了部署新的单位，建筑物旁边的专用出兵口必须未被占用。如果您的单位占据了该地块，您必须先移走它。
+MISSION_2_OFFICER_BARRACKS_TIP_3,您也可以利用这个优势。阻挡敌方建筑旁边的出兵口，阻止他们部署增援部队。
