Lokalise label and tips translations

--- a/translations/translations_zh_CN.csv
+++ b/translations/translations_zh_CN.csv
@@ -126,6 +126,16 @@ LABEL_WORKSHOP_TANK,坦克
 LABEL_WORKSHOP_HELI,直升机
 LABEL_WORKSHOP_CIVILIAN,平民
 LABEL_WORKSHOP_CONCRETE,混凝土
+MSG_NO_ENOUGH_AP,"NOT ENOUGH AP"
+MSG_START_YOUR_TURN_NOW,"Start your turn now!"
+MSG_EMPTY_DISPLAY,"&lt; NOTHING TO DISPLAY&#000a;&lt; SELECT UNIT OR BUILDING"
+MSG_GAME_DESCRIPTION_1,自由*&开源
+MSG_GAME_DESCRIPTION_2,回合制战略游戏
+MSG_FREE_AS_FREEDOM,"*free，是自由（freedom）的自由（free），而不是免费啤酒（free beer）的免费（free）"
+MSG_INDIE_GAME,"INDIE GAME&#000a;DESIGN &amp; &#000a;DEVELOP"
+MSG_WORKSHOP_USE_UNIQUE_NAME,"USE UNIQUE NAME"
+MSG_WORKSHOP_CREATE_NEW_ISLAND,"CREATE NEW ISLAND"
+MSG_WORKSHOP_LOSE_MAP_DATA,"YOU WILL LOSE MAP DATA!"
 LABEL_GAME_OVER,游戏结束
 LABEL_DOMINATION,占领
 LABEL_MOVES,移动
@@ -158,6 +168,7 @@ LABEL_CANCEL,取消
 TIP_COMPLETE_MAP_FIRST,你需要先在遭遇战模式下完成此地图，才能上传它。
 LABEL_GOT_IT,知道了！
 LABEL_ONLINE_MENU,在线地图
+MSG_ONLINE_MENU_DESC,"DOWNLOAD NEW MAPS OR SHARE YOUR OWN CREATIONS WITH THE WORLD!"
 TIP_UPLOADING_WAIT,正在上传！请稍候。
 TIP_UPLOADING_SUCCESS,上传成功！现在你可以与你的朋友分享你的新地图代码：
 TIP_UPLOADING_FAIL,上传失败。请稍后再试。
@@ -177,6 +188,7 @@ TIP_DOWNLOADING_WAIT,正在下载地图！请等待。
 TIP_MAP_DOWNLOAD_SUCCESS,地图已下载完成。
 TIP_MAP_DOWNLOAD_FAIL,无法下载地图。请检查代码是否正确并重试。
 LABEL_VERSION,版本
+TITLE_GAMEPAD_CONFIG,游戏手柄图示
 LABEL_PREVIOUS_UNIT,选取上一个单位
 LABEL_NEXT_UNIT,选取下一个单位
 LABEL_SELECTOR_MOVEMENT,移动选取框
@@ -191,17 +203,33 @@ LABEL_SUMMER,夏季
 LABEL_FALL,秋季
 LABEL_WINTER,冬季
 LABEL_WORKSHOP_FAILURE,操作失败
+MSG_WORKSHOP_FILE_ERROR_NAME,"Map name may only contain alphanumeric characters and an underscore sign."
+MSG_WORKSHOP_FILE_NOT_FOUND,"Map with specified name does not exists."
+MSG_WORKSHOP_CHECK_TYPOS,"Please re-check file name"
 LABEL_OK,确认
 LABEL_NEXT_TURN,结束回合
 LABEL_CPU_TURN,"CPU 回合"
 LABEL_REFRESHING_MATCHES,正在刷新比赛
 TIP_REFRESHING_WAIT,正在刷新在线比赛列表。请稍候...
 LABEL_CREATE_MATCH,创建比赛
+MSG_CONFIRM_CREATE,"DO YOU WANT TO HOST A NEW MATCH?"
 LABEL_PROCEED,继续
 LABEL_PICK_SIDE,选择阵营
+MSG_PICK_SIDE,"PICK THE SIDE YOU WANT TO PLAY AS"
+MSG_SELECTED_MAP,"SELECTED MAP: "
+MSG_SELECTED_SIDE,"SELECTED SIDE: "
+MSG_READY_TO_CREATE,"CREATE MATCH?"
+MSG_CREATING_MATCH_WAIT,"CREATING NEW MATCH. PLEASE WAIT..."
 LABEL_FAILURE,操作失败
+MSG_OPERATION_FAILED,"NETWORK OPERATION FAILED. PLEASE CHECK YOUR INTERNET CONNECTION AND TRY AGAIN."
 LABEL_JOIN_MATCH,加入一场比赛
+MSG_INPUT_MATCH_CODE,"INPUT MATCH JOIN CODE"
 LABEL_JOIN,加入
+MSG_ALREADY_IN_MATCH,"YOU ARE ALREADY IN THAT MATCH"
+MSG_FETCHING_MATCH_DETAILS,"FETCHING MATCH DETAILS. PLEASE WAIT..."
+MAG_AVAILABLE_SIDE,"AVAILABLE SIDE: "
+MAG_PROCEED_JOIN,"JOIN THIS MATCH?"
+MSG_JOINING_MATCH_WAIT,"JOINING A MATCH. PLEASE WAIT..."
 LABEL_MATCH_CODE,比赛代码：
 LABEL_YOUR_TURN,你的回合
 LABEL_ENEMY_TURN,对手回合
@@ -214,11 +242,17 @@ LABEL_MATCH_FORFEIT,对手离开
 LABEL_MAP_CODE,地图：
 LABEL_INVALID_MATCH,无效比赛
 LABEL_ABANDON_MATCH,放弃比赛
+MAG_ABANDON_MATCH,"ARE YOU SURE YOU WANT TO ABANDON THIS MATCH? YOU WILL NOT BE ABLE TO CONTINUE THIS GAME."
 LABEL_CLEAR_SLOT,清除游戏房间
+MSG_CLEARING_SLOT_WAIT,"CLEARING GAME SLOT. PLEASE WAIT..."
 LABEL_SHOW_REPLAY,显示回放
+MSG_SHOW_REPLAY,"DO YOU WANT TO SEE THE REPLAY OF OPPONENTS TURN?"
 LABEL_REPLAY,重启游戏
 LABEL_SKIP,跳过
 LABEL_LOADING_MATCH,正在加载比赛
+MSG_LOADING_MATCH_WAIT,"LOADING MATCH DATA. PLEASE WAIT..."
+MSG_OPPONENT_WAIT,"WAITING FOR OPPONENT..."
+MSG_CHECKING_STATE,"CHECKING FOR NEW MOVES..."
 LABEL_REPLAYING_MOVES,重新进行回合
 LABEL_REFRESH,刷新
 LABEL_MULTIPLAYER,多人游戏
@@ -226,12 +260,18 @@ LABEL_CREATE,创建
 LABEL_FORFEIT,放弃
 LABEL_CLEAR,清除
 LABEL_HELP,帮助
+MSG_MULTIPLAYER_WELCOME,"Welcome to ToF multiplayer!"
 TIP_ONLINE_HELP_1,要开始一个新游戏，请按下一个游戏房间上的“创建”按钮。如果按钮被禁用，这意味着你需要先下载在线地图。请访问http://online.tof.p1x.in找一些！一旦你主持了一场比赛，请把比赛代码给你的朋友加入。
 TIP_ONLINE_HELP_2,"在比赛中，你或你的对手进行回合没有时间限制。记住，在等待你的回合时不要闲下来 - 你可以自由参与战役、遭遇战或加载到不同的多人比赛中！退出游戏也是一个选择，但你会这样做吗？"
 TIP_ONLINE_HELP_3,您最多只能创建四个游戏房间，清除那些已经结束的游戏房间。
+MSG_SPAWN_BLOCKED,"SPAWN BLOCKED"
+MSG_MULTIPLAYER_LOBBY_HEADLINE,"ONLINE MULTIPLAYER LOBBY"
+MSG_MULTIPLAYER_LOBBY_SUB,"you may have up to four simultaneous games"
 LABEL_WORKSHOP_CLEAR_MAP,清除地图上所有东西
+MSG_WORKSHOP_FILL_MAP,"FILL MAP WITH GRASS TILES"
 LABEL_WORKSHOP_TILES,格子
 LABEL_PREVIEW,预览
+MSG_ASK_UPLOAD,"BEGIN MAP UPLOAD?"
 LABEL_GFX,画面
 LABEL_SOUND,声音
 LABEL_TOOLTIPS,物品提示
@@ -243,6 +283,3 @@ LABEL_CAMERA_SPEED,镜头速度
 LABEL_BLUE_TEAM_TURN,蓝队回合
 LABEL_RED_TEAM_TURN,红队回合
 LABEL_NO_MORE_MOVES,没有可用的移动次数
-MISSION_2_OFFICER_BARRACKS_TIP_1,部署与移动单位将花费我们的资源。要明智地使用这些资源。
-MISSION_2_OFFICER_BARRACKS_TIP_2,为了部署新的单位，建筑物旁边的专用出兵口必须未被占用。如果您的单位占据了该地块，您必须先移走它。
-MISSION_2_OFFICER_BARRACKS_TIP_3,您也可以利用这个优势。阻挡敌方建筑旁边的出兵口，阻止他们部署增援部队。
